welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:15: error: Unmatched closing brace '}' ignored here
}  
^alarmClock:16: error: eof expected but '}' found.
 }
 ^